# client-library-python

./: .gitignore  README.md  README_pypi.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi.yml
docs/: AttachmentsCreate.md  BlobList.md  Blobs.md  BucketCreate.md  BucketDetail.md  BucketList.md  BucketUpdate.md  BuildList.md  CoreApi.md  DeploymentCreateResponse.md  DeploymentInputFieldCreate.md  DeploymentInstanceType.md  DeploymentOutputFieldCreate.md  DeploymentRequests.md  DeploymentVersionCreate.md  DeploymentVersionDetail.md  DeploymentVersionList.md  DeploymentVersionUpdate.md  Deployments.md  Environments.md  ExpressionEvaluate.md  FileDetail.md  FileUploadResponse.md  Files.md  ImportsAndExports.md  Instances.md  Metrics.md  Monitoring.md  Organizations.md  OutputFieldWidgetCreate.md  PipelineRequests.md  PipelineVersionObjectCreate.md  PipelineVersionObjectList.md  Pipelines.md  Projects.md  RequestSchedules.md  RoleAssignmentCreate.md  RoleAssignmentList.md  Roles.md  ServiceUsers.md  (+4 more)
docs/models/: AdditionalData.md  AttachmentFieldsList.md  AttachmentSourcesList.md  AttachmentsCreate.md  AttachmentsList.md  AuditList.md  BucketCreate.md  BucketDetail.md  BucketList.md  BucketUpdate.md  BuildList.md  BuildUpdate.md  Cluster.md  DeploymentCreate.md  DeploymentCreateResponse.md  DeploymentDetail.md  DeploymentInputFieldCreate.md  (+169 more)
examples/: quickstart-deployments-and-pipelines.ipynb  quickstart-mnist.ipynb  quickstart-training.ipynb
ubiops/: __init__.py  api_client.py  configuration.py  exceptions.py  nullcontext.py  rest.py
(+261 files in other folders)
